src-tauri/tests/snapshots/api_sessions__session_detail_shape.snap
---
source: tests/api_sessions.rs
expression: "&body"
---
{
  "active_time_seconds": "[secs]",
  "cost_by_model": [
    {
      "key": "claude-opus",
      "value": "[cost]"
    }
  ],
  "files": [
    {
      "file_path": "src/main.ts",
      "lines_added": 10,
      "lines_removed": 3
    }
  ],
  "session": {
    "accepts": 2,
    "cost_usd": "[cost]",
    "cwd": null,
    "ended_at": "[ts]",
    "host_arch": null,
    "os_type": null,
    "rejects": 1,
    "repo_branch": null,
    "repo_name": null,
    "repo_remote": null,
    "repo_root": null,
    "service_version": null,
    "session_id": "detail-1",
    "started_at": "[ts]",
    "tokens_input": 400,
    "tokens_output": 200
  },
  "tokens_by_type": [
    {
      "key": "input",
      "value": "[tokens]"
    },
    {
      "key": "output",
      "value": "[tokens]"
    }
  ],
  "tool_decisions": [
    {
      "decision": "accept",
      "file_path": null,
      "language": "typescript",
      "timestamp": "[ts]",
      "tool_name": "Edit"
    },
    {
      "decision": "accept",
      "file_path": null,
      "language": "typescript",
      "timestamp": "[ts]",
      "tool_name": "Edit"
    },
    {
      "decision": "reject",
      "file_path": null,
      "language": "typescript",
      "timestamp": "[ts]",
      "tool_name": "Edit"
    }
  ]
}
