src-tauri/tests/snapshots/api_sessions__v2_sessions_shape.snap
---
source: tests/api_sessions.rs
expression: "&body"
---
{
  "coverage": {
    "total": 2,
    "with_repo": 0
  },
  "sessions": [
    {
      "aborts": 1,
      "accepts": 1,
      "api_calls": 1,
      "cost_usd": "[cost]",
      "cwd": null,
      "decisions": 2,
      "duration_seconds": "[secs]",
      "ended_at": "[ts]",
      "host_arch": null,
      "os_type": null,
      "rejects": 0,
      "repo_branch": null,
      "repo_name": null,
      "repo_remote": null,
      "repo_root": null,
      "service_version": null,
      "session_id": "v2-1",
      "started_at": "[ts]",
      "tokens_input": 300,
      "tokens_output": 150,
      "top_model": "claude-sonnet"
    },
    {
      "aborts": 0,
      "accepts": 0,
      "api_calls": 1,
      "cost_usd": "[cost]",
      "cwd": null,
      "decisions": 0,
      "duration_seconds": "[secs]",
      "ended_at": "[ts]",
      "host_arch": null,
      "os_type": null,
      "rejects": 0,
      "repo_branch": null,
      "repo_name": null,
      "repo_remote": null,
      "repo_root": null,
      "service_version": null,
      "session_id": "v2-2",
      "started_at": "[ts]",
      "tokens_input": 0,
      "tokens_output": 0,
      "top_model": "claude-haiku"
    }
  ]
}
